@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-25T08:09:05Z",
+  "timestamp" : "2022-06-27T16:10:22Z",
   "count_outdated" : 1645,
   "uniques_outdated" : 102,
-  "count" : 1690,
-  "uniques" : 105,
+  "count" : 1697,
+  "uniques" : 106,
   "views" : [
     {
       "timestamp": "2022-06-16T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-06-19T00:00:00Z",
       "count": 7,
       "count_minmax": [ 2, 7 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-27T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
