@@ -1,5 +1,5 @@
 {
-  "count": 45,
+  "count": 52,
   "uniques": 1,
   "views": [
     {
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
+      "count": 7,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-27T00:00:00Z",
       "count": 7,
       "uniques": 1
     }
